--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,3 +1,6 @@
+
+
+
 body {
     font-family: 'Roboto', sans-serif;
     display: flex;
@@ -44,9 +47,13 @@ h1 {
 }
 
 .main-image > img {
-    padding-left: 2rem;
-    width: 28rem;
-    height: 40rem;
+    max-width: 100%;
+  display: block;
+}
+
+.mobile-image > img {
+    display: none;
+    visibility: hidden;
 }
 
 form {
@@ -140,3 +147,56 @@ form > button {
     color: hsl(0, 0%, 100%); 
  }
         
+
+
+/*Mobile Layout*/
+/*@media(max-width: 641px){*/
+    @media(max-width: 854px){
+
+    body {
+        background-color: whitesmoke;
+        display: flex;
+        flex-wrap: wrap; 
+        margin: 0;
+}
+   
+    #container-sign-up { 
+        display: flex;
+        flex-direction: column-reverse;
+        align-items: center;
+        justify-content: center;
+        width: 35rem;
+        height: 65rem;
+        padding: 0;
+        margin: 0;
+    }
+
+.sign-up-form {
+    width: auto;
+    padding: 0;
+    margin: 0;
+}
+
+.main-image > img {
+    padding: 0;
+    display: none;
+    visibility: hidden;
+}
+
+.mobile-image > img {
+    display: flex;
+    visibility: visible;
+    object-fit: cover;
+    width: 650px;
+    padding: 0;
+    margin: 0;
+}
+
+    .attribution { 
+        color: black; 
+     }
+    
+     .attribution a { 
+        color: black; 
+     }
+}
